# ai-buildcamp-capstone-project

./: README.md  pyproject.toml  update_nb.py
data/: jobs.json
notebooks/: 01-setup.ipynb  02-rag.ipynb
