[project]
name = "ai-resume-matcher"
version = "0.1.0"
description = "AI-powered tool to match job seekers' profiles with job requirements and provide actionable feedback."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]
